# python_playground

./: README.md  serialize.py
.github/workflows/: lint_python.yml
PyScript/: README.md  try.html
ast_practice/: create_ast_tree.py  simple_fun.py
autofill/: autofill.py  csv2clipboard.py  salary.csv
buildin_class/dataclass/: try.py
buildin_class/enum_class/: enum_class.py
buildin_class/property_of_class/: sample.py
buildin_functions/: test.py
buildin_modules/asyncio/: sample.py
buildin_modules/configparser_sample/: sample.py
buildin_modules/find_package_dependency/: pydep.py
buildin_modules/get_pc_infos/: get.py
buildin_modules/logging/: logging_config.ini  try3.py  try4.py  try_logging.py  trylogging2.py
buildin_modules/pkg_practice/: sample_import_pkg.py
buildin_modules/shelve/: sample.py
bump/: vd_bump_version.py
cirq/: cirq_playground.py
click_cli/: main.py
configparser_sample/: myapp.ini
db/mongodb/: hello-mongo-db.py
exe_py_zip/: exe_py_zip.py
misc-code/: filewatcher.ps1
pkg_practice/: sample_import_big_pkg.py
pygame/: README.md  client.py  food.py  game.py  pyproject.toml  server.py  snake.py  snake_class.py  snakes.py
pytestsample/: sample.py
rabbitmq/: Pipfile
resources/: comtype.patch  venv.7z
robot_dryrun/: README  run.bat
rpc/grpc/: README.md  impacket_client.py  impacket_server.py  pyproject.toml  vcosmos.proto  vcosmos_pb2.py  vcosmos_pb2_grpc.py
tqdm/: zip_with_progress.py
uiautomation/: mouseclick.ps1
venv_practice/: .gitignore  run.bat
webscraper/: ptt_scraper.py  pyptt.py
wmi/: sample.py
(+49 files in other folders)
